implementation of login and register views and logic, creation of alert system, api comunication user managment including login register and logout

--- a/BankApplication.BlazorFrontend/_Imports.razor
+++ b/BankApplication.BlazorFrontend/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using BankApplication.BlazorFrontend
 @using BankApplication.BlazorFrontend.Shared
+@using BankApplication.BlazorFrontend.Services
