--- a/BankApplication.BlazorFrontend/Pages/Index.razor
+++ b/BankApplication.BlazorFrontend/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
+<UnloggedNav></UnloggedNav>
+    <h1>Hello, world!</h1>
 
-<h1>Hello, world!</h1>
+    Welcome to your new app.
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
