alerts fix, added logout fe logic

--- a/BankApplication.BlazorFrontend/Pages/Dashboard.razor
+++ b/BankApplication.BlazorFrontend/Pages/Dashboard.razor
@@ -2,7 +2,7 @@
 @inject IUserManagmentService UserManagmentService
 @inject NavigationManager NavigationManager
 @inject IAlertService AlertService
-
+ <LoggedNav></LoggedNav>
 <h3>Dashboard</h3>
 
 @code {
