--- a/BankApplication.BlazorFrontend/Pages/Login.razor
+++ b/BankApplication.BlazorFrontend/Pages/Login.razor
@@ -54,9 +54,11 @@
             {
                 NavigationManager.NavigateTo("dashboard");
             }
-            AlertService.Error("Sprawdź wprowadzone dane!");
+            else
+            {
+                AlertService.Error("Sprawdź wprowadzone dane!");
+            }
             loading = false;
-
         }
         catch (Exception ex)
         {
