display of items fix

--- a/BankApplication.BlazorFrontend/Pages/Register.razor
+++ b/BankApplication.BlazorFrontend/Pages/Register.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager NavigationManager
 @inject IAlertService AlertService
 <UnloggedNav></UnloggedNav>
-<div class="container-fluid">
+<div class="container-fluid p-5">
     <div class="d-flex justify-content-center row">
         <div class="col-xl-6">
             <div class="card">
