--- a/BankApplication.BlazorFrontend/Pages/Login.razor
+++ b/BankApplication.BlazorFrontend/Pages/Login.razor
@@ -4,7 +4,7 @@
 @inject IAlertService AlertService
 @inject ILocalStorageService LocalStorageService
 <UnloggedNav></UnloggedNav>
-<div class="container-fluid">
+<div class="container-fluid p-5">
     <div class="d-flex justify-content-center row">
         <div class="col-xl-6">
             <div class="card">
@@ -27,9 +27,9 @@
                             {
                                 <span class="spinner-border spinner-border-sm mr-1"></span>
                             }
-                            Login
+                            Zaloguj
                         </button>
-                        <NavLink href="register" class="btn btn-link">Register</NavLink>
+                        <NavLink href="register" class="btn btn-link">Rejestracja</NavLink>
                     </EditForm>
                 </div>
             </div>
