changes in Navbar for logged users

--- a/BankApplication.BlazorFrontend/Shared/LoggedNav.razor
+++ b/BankApplication.BlazorFrontend/Shared/LoggedNav.razor
@@ -1,6 +1,18 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <NavLink class="navbar-brand" href="/">Super Kursy</NavLink>
+    <NavLink class="navbar-brand" href="dashboard">Aplikacja bankowa</NavLink>
     <ul class="navbar-nav mr-auto">
+        <NavLink class="nav-link" href="dashboard" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-home"></i> Pulpit
+        </NavLink>
+        <NavLink class="nav-link" href="operations" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-exchange-alt"></i> Historia operacji
+        </NavLink>
+        <NavLink class="nav-link" href="personaldata" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user"></i> Dane personalne
+        </NavLink>
+        <NavLink class="nav-link" href="settings" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-cogs"></i> Ustawienia
+        </NavLink>
     </ul>
     <ul class="navbar-nav">
         <NavLink class="nav-link" href="logout" role="button" aria-haspopup="true" aria-expanded="false">
