--- a/BankApplication.BlazorFrontend/Shared/UnloggedNav.razor
+++ b/BankApplication.BlazorFrontend/Shared/UnloggedNav.razor
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <NavLink class="navbar-brand" href="/">Super Kursy</NavLink>
+    <NavLink class="navbar-brand" href="/">Aplikacja bankowa</NavLink>
     <ul class="navbar-nav mr-auto">
     </ul>
     <ul class="navbar-nav">
