--- a/BankApplication.BlazorFrontend/_Imports.razor
+++ b/BankApplication.BlazorFrontend/_Imports.razor
@@ -8,3 +8,4 @@
 @using BankApplication.BlazorFrontend
 @using BankApplication.BlazorFrontend.Shared
 @using BankApplication.BlazorFrontend.Services
+@using BankApplication.SharedLibrary.Models
