--- a/BankApplication.BlazorFrontend/Pages/Logout.razor
+++ b/BankApplication.BlazorFrontend/Pages/Logout.razor
@@ -7,7 +7,7 @@
 @code {
     protected override async void OnInitialized()
     {
-        if (await LocalStorageService.GetItem<Models.UserModel>("user") != null)
+        if (await LocalStorageService.GetItem<Models.StorageUserModel>("user") != null)
         {
             await UserManagmentService.Logout();
             NavigationManager.NavigateTo("/");
