--- a/BankApplication.BlazorFrontend/_Imports.razor
+++ b/BankApplication.BlazorFrontend/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.Extensions.Configuration
 @using BankApplication.BlazorFrontend
 @using BankApplication.BlazorFrontend.Shared
 @using BankApplication.BlazorFrontend.Services
