--- a/BankApplication.BlazorFrontend/Pages/Dashboard.razor
+++ b/BankApplication.BlazorFrontend/Pages/Dashboard.razor
@@ -32,7 +32,7 @@
                             @if (item.IsActive)
                             {
                                 <li class="list-group-item"><h5>Saldo: @item.Balance</h5></li>
-                                <li class="list-group-item"><a href="operations/newtransfer/@item.Id" class="btn btn-link">Nowy przelew</a><a href="operations/@item.Id" class="btn btn-link">Historia operacji</a><button  @onclick="() => CloseAccount(item.Id)" class="btn btn-link">Zamknij rachunek</button></li>
+                                <li class="list-group-item"><a href="operations/newtransfer/@item.Id" class="btn btn-link">Nowy przelew</a><a href="operations/@item.Id" class="btn btn-link">Historia operacji</a><a href="account/limits/@item.Id" class="btn btn-link">Zmiana limitów</a><button  @onclick="() => CloseAccount(item.Id)" class="btn btn-link">Zamknij rachunek</button></li>
                             }
                             else
                             {
