--- a/BankApplication.BlazorFrontend/Shared/OperationDetailsModal.razor
+++ b/BankApplication.BlazorFrontend/Shared/OperationDetailsModal.razor
@@ -6,6 +6,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
+                <h5>Szczegóły przelewu</h5>
             </div>
             <div class="modal-body">
                 <h5>Tytuł: @Operation.Title</h5>
