integration with SettlementUnit and update to perations view

--- a/BankApplication.BlazorFrontend/Pages/NewOperation.razor
+++ b/BankApplication.BlazorFrontend/Pages/NewOperation.razor
@@ -73,6 +73,7 @@
         else if(TypePar.Equals("external"))
         {
             Type = "Przelew Zewnętrzny";
+            model = new ExternalOperationModel();
         }
         StateHasChanged();
     }
