--- a/BankApplication.BlazorFrontend/Pages/Operations.razor
+++ b/BankApplication.BlazorFrontend/Pages/Operations.razor
@@ -19,7 +19,7 @@
                         <tr>
                             <th scope="col">Typ przelewu</th>
                             <th scope="col">Tytuł przelewu</th>
-                            <th scope="col">Data operacj</th>
+                            <th scope="col">Data operacji</th>
                             <th scope="col">Kwota</th>
                             <th scope="col"></th>
                         </tr>
